# rrightclickrr

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  fix-registry.ps1  get-url-launcher.vbs  installer.nsh  launcher.js  launcher.vbs  main.js  package-lock.json  package.json  preload.js  register-background.bat  register-file-menu.ps1  register-menus.ps1  rrightclickrr.code-workspace  sync-folder-launcher.vbs  sync-launcher.vbs  test-sync.bat
.claude/: CLAUDE.md  LESSONS_LEARNED.md  SKILLS.md
dist-v1.2.10/: RRightclickrr Setup 1.2.10.exe.blockmap  builder-debug.yml  latest.yml
dist-v1.2.10/win-unpacked/resources/assets/: create-icons.js
dist-v1.2.11/: RRightclickrr Setup 1.2.11.exe.blockmap  builder-debug.yml  latest.yml
dist-v1.2.11/win-unpacked/resources/: app-update.yml
docs/: SPEC.md  index.html
scripts/: consolidate-dist.js  launch.js  post-build-copy.js  pre-build-clean.js
shell-extension/: AppxManifest.xml  CMakeLists.txt  README.md  RRightclickrrShell.def  build.bat  build_now.bat  rebuild.bat  register.ps1
shell-extension/src/: ExplorerCommand.cpp  ExplorerCommand.h  RRightclickrrShell.rc  SyncOverlay.cpp  SyncOverlay.h  dllmain.cpp  resource.h
src/lib/: context-menu.js  drive-uploader.js  folder-sync.js  folder-watcher.js  google-auth.js  sync-tracker.js
src/ui/: index.html  progress.html  renderer.js  styles.css
